--- a/.github/workflows/dynamic-injection-workflow.yaml
+++ b/.github/workflows/dynamic-injection-workflow.yaml
@@ -2,17 +2,17 @@ name: Dynamic README injection
 on:
   schedule: # Run workflow automatically
     # This will make it run every hour
-   - cron: '0 * * * *' 
-  # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
-  workflow_dispatch: 
+    - cron: "0 * * * *"
+    # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
+  workflow_dispatch:
 jobs:
   update-readme-repos-list:
-    name: Update this repo's README with latest blog posts
+    name: Update this repos README
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Magic update my profile
+      - name: Update my profile
         uses: actions/setup-node@v1
         with:
           node-version: 14.6.0
@@ -31,5 +31,3 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-
