--- a/.github/workflows/dynamic-injection-workflow.yaml
+++ b/.github/workflows/dynamic-injection-workflow.yaml
@@ -1,8 +1,8 @@
 name: Dynamic README injection
 on:
   schedule: # Run workflow automatically
-    # This will make it run every hour
-    - cron: "0 * * * *"
+    # This will make it run every day at 07:30
+    - cron: "30 7 * * *"
     # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
   workflow_dispatch:
 jobs:
